<resources>
    <string name="news_action">ACTION_FOUND_NEWS_RECEIVED</string>
    <string name="im_action">ACTION_FOUND_IM_RECEIVED</string>
    <string name="push_id_action">ACTION_PUSH_ID_RECEIVED</string>
    <string name="broadcast_intent_extra_tag_news">broadcast_intent_extra_tag_news</string>
    <string name="broadcast_intent_extra_tag_news_entity">broadcast_intent_extra_tag_news</string>
    <string name="broadcast_intent_extra_tag_im">broadcast_intent_extra_tag_im</string>
    <string name="broadcast_intent_extra_tag_im_entity">broadcast_intent_extra_tag_im_entity</string>
    <string name="broadcast_intent_extra_tag_im_group">broadcast_intent_extra_tag_im_group</string>
    <string name="broadcast_intent_extra_tag_group_noticetype">broadcast_intent_extra_tag_group_noticetype</string>
    <string name="broadcast_intent_extra_tag_group_newtitle">broadcast_intent_extra_tag_group_newtitle</string>
    <string name="broadcast_intent_extra_tag_push_id">clientid</string>
    <string name="app_admin_iscenter">false</string>
    <string name="unique_application_config_id">ffffffffffffffffffffffffffffffff</string>
    <string name="app_config_root_path">/configs/</string>
    <string name="title_mainactivity">@string/found_app_name</string>
    <string name="slidingmenu_fade_degree">0.35</string>
    <string name="title_section1">Title1</string>
    <string name="title_section2">Title2</string>
    <string name="title_section3">Title3</string>
    <string name="found_app_name">好医友vip</string>
    <string name="loading">载入中...</string>
    <string name="action_settings">系统设置</string>
    <string name="action_doctor_detail">医生详细信息</string>
    <string name="action_news_detail">新闻详情</string>
    <string-array name="country_arrays">
        <item>请输入PIN码</item>
        <item>扫描二维码</item>
    </string-array>
    <string name="new_message">未读消息</string>
    <string name="confirm_yes">是</string>
    <string name="confirm_no">否</string>
    <string name="ask_user_notification">愿意接受您的医生/医疗机构发送的消息和新闻推送吗?</string>
    <string name="drawer_open">Open the drawer</string>
    <string name="drawer_close">Close the drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_enabled">消息推送已启用. 如需禁用, 请访问系统设置菜单.</string>
    <string name="notification_disabled">消息推送已禁用. 如需启用, 请访问系统设置菜单.</string>
    <string name="notification">消息推送</string>
    <string name="tab_title_medical_center">医疗机构</string>
    <string name="tab_title_doctor_home">医疗专家信息</string>
    <string name="tab_title_patient">会员信息</string>
    <string name="tab_title_news">新闻和信息</string>
    <string name="tab_title_messages">消息</string>
    <string name="on_user_signed_in">已登入!</string>
    <string name="on_user_signin_failed">用户名/密码输入错误. 请重试.</string>
    <string name="you_have_news">您的医疗专家发布了新的新闻.</string>
    <string name="message_invalid_image">失败. 图片无效. 请重试</string>
    <string name="instant_message_content_desc_image">[图片]</string>
    <string name="instant_message_content_desc_file">[文件]</string>
    <string name="instant_message_content_desc_voice">[音频]</string>
    <string name="im_record_recording">停止并发送</string>
    <string name="im_record_cancel">松开并取消</string>
    <string name="voice_message_press_to_play">按下开始播放消息</string>
    <string name="voice_message_press_to_stop">按下停止</string>
    <string name="ask_for_login">登录</string>
    <string name="error_msg_duplicate_username">这个邮箱地址已于其他账号绑定.</string>
    <string name="error_msg_wrong_username_or_password">邮箱/密码输入错误.</string>
    <string name="error_msg_wrong_register_other">注册失败. 请检查网络连接情况并重试.</string>
    <string name="new_user_register">新用户?</string>
    <string name="login_email">用户名/邮箱:</string>
    <string name="login_password">密码:</string>
    <string name="network_wait">连接中...请稍后</string>
    <string name="login_invalid_input">无效的邮箱/密码. 请检查并重试.</string>
    <string name="sign_out_complete">您已成功登出账号.</string>
    <string name="action_registeruser">新用户</string>
    <string name="register_success">祝贺您! 已成功注册账号. 现将自动登录.</string>
    <string name="register_unmatched_pwd">两次输入的密码不相同.</string>
    <string name="register_all_fields_required">所有的项目都必填.</string>
    <string name="register_password_too_short">您输入的密码太短. 请至少使用6位字符.</string>
    <string name="register_invalid_email_address">请输入正确的邮箱地址.</string>
    <string name="forgot_password">如需找回密码, 请联系客服</string>
    <string name="action_logout">登出</string>
    <string name="logout_title">确认登出</string>
    <string name="logout_message">登出账号将清除本机上您的用户信息和聊天记录.</string>
    <string name="logout_confirm">登出</string>
    <string name="cancel">返回</string>
    <string name="register_detail_info">请完善您的个人信息.</string>
    <string name="action_capture">请扫描二维码</string>
    <string name="contact_patient">会员</string>
    <string name="contact_pro">医疗专家</string>
    <string name="contact_add_success">添加成功</string>
    <string name="contact_add_failed">无法找到该联系人, 请重试.</string>
    <string name="contact_added_by_others"> 添加您为联系人.</string>
    <string name="contact_added_by_anonym"> 您有一个新联系人.</string>
    <string name="toast_doctormainactivity_pin_already_added">这个PIN密码已被添加过.</string>
    <string name="toast_doctormainactivity_pin_no_exists">这个PIN密码不存在, 请核实并重试.</string>
    <string name="toast_doctormainactivity_blocked">您被该用户屏蔽了.</string>
    <string name="toast_doctormainactivity_other">现在无法连接到服务器. 请重试.</string>
    <string name="button_doctormainactivity_enter_pin">输入PIN密码</string>
    <string name="button_doctormainactivity_scan">请扫描二维码</string>
    <string name="title_dialog_doctormainactivity_add"></string>
    <string name="title_dialog_doctormainactivity_input_pin">输入PIN密码</string>
    <string name="toast_entitylistactivity_pin_duplicate">这个PIN密码已被添加过.</string>
    <string name="toast_entitylistactivity_pin_no_exists">这个PIN密码不存在, 请核实并重试.</string>
    <string name="toast_entitylistactivity_other">现在无法连接到服务器. 请重试.</string>
    <string name="toast_entitylistactivity_scan_failed">二维码扫描失败, 请重试.</string>
    <string name="toast_entitylistactivity_add_new_success">成功添加医疗专家</string>
    <string name="toast_entitylistactivity_upload_profile_icon_failed">头像上传失败</string>
    <string name="toast_entitylistactivity_upload_profile_icon_success">头像上传成功</string>
    <string name="button_dialog_single_healthcare_provider">独立医疗专家</string>
    <string name="button_dialog_medical_group">医疗组织或机构</string>
    <string name="title_dialog_registeruseractivity_select_user_type">选择您的类型</string>
    <string name="title_dialog_registeruseractivity_signin_patient">登录会员账号</string>
    <string name="content_dialog_registeruseractivity_ask_patient_signin">您想要现在注册或登录一个会员账号吗?</string>
    <string name="confirm_no_skip">不(跳过)</string>
    <string name="textview_settings_signin_first">请先登录</string>
    <string name="toast_error_google_service">谷歌地图服务错误, 请重启.</string>
    <string name="marker_map_title_doctor">医疗专家</string>
    <string name="toast_error_download_failed">下载失败. 请重试.</string>
    <string name="title_app_chooser_select_picture">选择图片.</string>
    <string name="toast_error_recording_failed">录音失败. 请重试.</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="toast_error_damaged_voice">音频文件已损坏, 请重试.</string>
    <string name="msg_dialog_downloading">下载中</string>
    <string name="toast_error_birth_format">生日输入格式错误</string>
    <string name="toast_error_load_profile">下载用户档案失败</string>
    <string name="toast_success_update_profile">用户档案更新成功</string>
    <string name="toast_failure_update_profile">用户档案更新失败</string>
    <string name="toast_success_upload_icon">头像上传成功; 头像图标已保存.</string>
    <string name="toast_failure_upload_icon">头像上传失败</string>
    <string name="website">网站:</string>
    <string name="accepted_insurance">接受的保险类型:</string>
    <string name="username">用户名:</string>
    <string name="your_username">您的用户名</string>
    <string name="signout">登出并清除所有信息</string>
    <string name="doctor_name">医疗专家姓名</string>
    <string name="center_name">机构或组织名称</string>
    <string name="hours">在线时间:</string>
    <string name="pin">PIN码:</string>
    <string name="photo">照片:</string>
    <string name="about">关于:</string>
    <string name="about_info">关于信息</string>
    <string name="address">地址:</string>
    <string name="phone">电话:</string>
    <string name="new_msg">新消息</string>
    <string name="specialty">专长:</string>
    <string name="offices">办公室地址:</string>
    <string name="doctor_photo">照片:</string>
    <string name="welcome">欢迎!</string>
    <string name="click_signin">点此处登录或注册新账号…</string>
    <string name="add_new_pro">添加新的医疗专家/机构</string>
    <string name="resume">继续:</string>
    <string name="hold_talk">按住并讲话</string>
    <string name="attach_img">图像</string>
    <string name="send">发送</string>
    <string name="record">录音</string>
    <string name="Type_text">类行</string>
    <string name="enter">输入</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="news_time">时间</string>
    <string name="firstname">名:</string>
    <string name="lastname">姓:</string>
    <string name="gender">性别:</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="dob_format">生日: (月/日/年)</string>
    <string name="profile_email">主要邮箱地址 / 用户名:</string>
    <string name="profile_email2">备用邮箱地址: (选填)</string>
    <string name="profile_phone">电话: (选填)</string>
    <string name="profile_medical_condition">医疗状况/主诉: (选填)</string>
    <string name="profile_surgeries">以往手术史: (选填)</string>
    <string name="profile_medications">用药记录: (选填)</string>
    <string name="profile_allergies">过敏反应: (选填)</string>
    <string name="profile_insurances">保险: (选填)</string>
    <string name="profile_back">返回</string>
    <string name="submit">提交</string>
    <string name="title_registration">注册</string>
    <string name="firstname_colon">名:</string>
    <string name="lastname_colon">姓:</string>
    <string name="centername_colon">Center Name:</string>
    <string name="email_colon">邮箱地址:</string>
    <string name="pwd_colon">密码:</string>
    <string name="confirm_pwd_colon">确认密码:</string>
    <string name="signin_as_patient_info">使用会员身份登录. 您可以注册账号. 如不注册账号, 消息及账号同步更新服务将无法使用</string>
    <string name="signin_as_doctor_info">使用医疗专家身份登录, 并注册账号.</string>
    <string name="doctor_skill">专长:</string>
    <string name="certification_id">证书编号:</string>
    <string name="notification_message_prefix">"您有 "</string>
    <string name="notification_message_infix">" 新消息从 "</string>
    <string name="you_have_msgs">"您收到的新消息"</string>
    <string name="you_have_msgs_from">"给您发送了一条新消息 "</string>
    <string name="you_have_new_group_message">您有新的群聊信息</string>
    <string name="btn_recording_cancel">取消录音</string>
    <string name="toast_error_record_too_short">录音时间太短</string>
    <string name="compose_hint">发送消息</string>
    <string name="status_im_send_failed">未发送</string>
    <string name="status_im_send_sent">已发出</string>
    <string name="status_im_send_delivered">已送达</string>
    <string name="status_im_send_is_read">已读</string>
    <string name="status_im_send_sending">加密中</string>
    <string name="title_activity_conversation">对话</string>
    <string name="action_example">操作举例</string>
    <string name="navi_title_conversation">对话</string>
    <string name="navi_title_contact">联系人列表</string>
    <string name="navi_title_more">更多</string>
    <string name="navi_text_conversation_all">所有消息</string>
    <string name="navi_text_conversation_single">个人</string>
    <string name="navi_text_conversation_group">群组</string>
    <string name="navi_text_conversation_starred">星标</string>
    <string name="role_group">我们是专业医疗服务团体.</string>
    <string name="register_group_name">群组名称:</string>
    <string name="register_email_address">邮箱地址:</string>
    <string name="reauth_tips">距离上次登录已有一段时间了. 请再次输入密码以确认您的身份. 您可以在系统设置中更改重新认证被启用的时间间隔.</string>
</resources>